tests/ui/using-for/attached_functions.stderr
error: member `address` not found on type `function (uint256) pure external returns (uint256)`
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.ext.address;
   ╰╴              ━━━━━━━

error: member `pick` not unique on type `uint256`
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.pick;
   ╰╴          ━━━━

error: mismatched types
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         function(uint256) internal pure returns (uint256) ptr = x.inc;
   ╰╴                                                                ━━━━━ attached functions cannot be converted into unattached functions

error: wrong argument count for function call: 1 arguments given but expected 0
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.inc(1);
   │         ━━━━━┬──
   │              │
   ╰╴             expected 0 arguments, found 1

error: wrong argument count for function call: 0 arguments given but expected 1
   ╭▸ ROOT/tests/ui/using-for/attached_functions.sol:LL:CC
   │
LL │         x.add();
   │         ━━━━━┬─
   │              │
   ╰╴             expected 1 argument, found 0

error: aborting due to 5 previous errors

